resolved menu z-index issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ header {
     transition: 0.5s ease;
     transform: translateX(-180px);
     border-radius: 10px;
+    z-index: 1;
 
 }
 
@@ -120,7 +121,7 @@ label input {
     width: 30px;
     top: 20px;
     left: 15px;
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
     border-radius: 2px;
     background-color: #2c2b2c;
